--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,5 +1,5 @@
-@tailwind base;
-@tailwind components;
+/* @tailwind base;
+@tailwind components; */
 @tailwind utilities;
 
 @keyframes maintenance-intermittent-spin {
